extending functionality to videos and organizing files

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,17 @@ wheels/
 # Virtual environments
 .venv
 
+# Testing and coverage
+.coverage
+.pytest_cache/
+htmlcov/
+.tox/
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+
 # Image files
 *.jpg
 *.jpeg
