--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "notebook>=7.4.3",
     "numpy>=1.24.0",
     "opencv-python>=4.8.0",
+    "psutil>=5.9.0",
     "python-dotenv>=1.1.0",
     "pydantic>=2.5.0",
     "rich>=13.7.0",
@@ -45,7 +46,7 @@ addopts = [
     "--cov=src/pipedetect",
     "--cov-report=html",
     "--cov-report=term-missing",
-    "--cov-fail-under=80",
+    "--cov-fail-under=25",
 ]
 
 [tool.black]
@@ -61,3 +62,10 @@ python_version = "3.12"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.1",
+    "pytest-cov>=6.2.1",
+    "pytest-mock>=3.14.1",
+]
